deployment/Kubernetes/overlays/local/dev/rap/rap-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rap
spec:
  template:
    spec:
      containers:
        - name: ampersand-rap
          image: ampersandtarski/ampersand-rap:dev-latest
