deployment/Kubernetes/overlays/local/dev/rap/rap-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rap-ingress
spec:
  tls:
    - hosts:
        - dev.rap.tarski.nl
      secretName: rap-tls-dev-secret
  rules:
    - host: dev.rap.tarski.nl
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: rap
                port:
                  number: 80
